welcome.lessons.welcome.array.maxvalue.Extrema.scala.error
extrema:6: error: value length_= is not a member of Array[Int]
if (nums.length = 1 ){
         ^